# backdrop-blur

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/backdrop-blur-core/: Cargo.toml  README.md
crates/backdrop-blur-core/src/: algorithm.rs  error.rs  eviction.rs  geometry.rs  gl_region.rs  lib.rs  liveness.rs  material.rs  outcome.rs  seam.rs
crates/backdrop-blur-egui/: Cargo.toml  README.md
crates/backdrop-blur-egui/src/: grab_pass.rs  lib.rs  own_loop.rs  surface.rs
crates/backdrop-blur-egui/tests/: own_loop_render.rs
crates/backdrop-blur-glow/: Cargo.toml  README.md
crates/backdrop-blur-glow/src/: blur.rs  blur_tests.rs  composite.rs  gl_harness.rs  grab.rs  lib.rs  profile.rs  program.rs  scratch.rs
crates/backdrop-blur-glow/src/shaders/: composite.frag  composite.vert  downsample.frag  fullscreen.vert  gaussian.frag  upsample.frag
crates/backdrop-blur-glow/tests/: gl_backend.rs
crates/backdrop-blur-glow/tests/gl_harness/: mod.rs
crates/backdrop-blur-wgpu/: Cargo.toml  README.md
crates/backdrop-blur-wgpu/src/: cache.rs  fault.rs  lib.rs  uniforms.rs
crates/backdrop-blur-wgpu/src/shaders/: composite.wgsl  downsample.wgsl  gaussian.wgsl  upsample.wgsl
crates/backdrop-blur-wgpu/tests/: error_scope.rs  snapshot.rs  wgpu_core_version_pin.rs
crates/backdrop-blur-wgpu/tests/common/: mod.rs
docs/: DESIGN.md  GLOW_DESIGN.md  GLOW_IMPL.md  IMPL.md  OPACITY.md  PRESENCE.md  RESEARCH.md  STRUCTURE.md
docs/screenshots/: README.md
examples/eframe-glow-panel/: Cargo.toml
examples/eframe-glow-panel/src/: main.rs
examples/egui-wgpu-panel/: Cargo.toml
examples/egui-wgpu-panel/src/: main.rs
examples/frost-gallery/: Cargo.toml
examples/frost-gallery/src/: main.rs
examples/glow-gate/: Cargo.toml
examples/glow-gate/src/: lib.rs
examples/webgpu-fault-probe/: Cargo.toml  index.html
examples/webgpu-fault-probe/src/: lib.rs
