# Virtual-manifest workspace (STRUCTURE §1/§6). No root package — the crates live
# under `crates/`. The winit example (`examples/egui-wgpu-panel`) is deliberately a
# SEPARATE workspace (added to `exclude` when it lands in step 3c) so that
# `cargo clippy --workspace --all-targets` never pulls winit and the default
# verification tier stays portable to any machine, GPU or not (IMPL §8, M2).

[workspace]
resolver = "3"
members = ["crates/*"]
# Standalone winit-pulling packages kept OUT of the workspace so `cargo build --workspace`
# and `cargo clippy --workspace --all-targets` never compile winit, keeping the default
# verification tier portable to any machine (IMPL §8). NOTE: `backdrop-blur-glow` IS a
# workspace member — glow is build-script-free and compiles with no GL present, and ALL its
# GPU tests are `gl-snapshots`-gated, so `cargo test --workspace` stays GPU-free (the unsafe
# crate gains clippy + the undocumented-unsafe-blocks lint as a bonus; IMPL §1.2). Each
# excluded package builds in its own job via `--manifest-path`.
exclude = ["examples/egui-wgpu-panel", "examples/frost-gallery", "examples/eframe-glow-panel"]

[workspace.package]
edition = "2024"
# MSRV = max(1.85 edition-2024 floor, 1.87 wgpu 29, 1.92 egui/egui-wgpu 0.34) = 1.92.
# The `rust-toolchain.toml` pins the dev/CI toolchain; a dedicated CI job verifies this floor.
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/abdu-benayad/backdrop-blur"
authors = ["Abdu Benayad <abdu.benayad@gmail.com>"]
keywords = ["blur", "backdrop", "frosted-glass", "vibrancy", "gpu"]
categories = ["graphics", "gui", "rendering", "wasm"]

[workspace.dependencies]
# Internal crates — path + version so they are publishable as a set.
backdrop-blur-core = { path = "crates/backdrop-blur-core", version = "0.2.0" }
backdrop-blur-wgpu = { path = "crates/backdrop-blur-wgpu", version = "0.2.0" }
backdrop-blur-glow = { path = "crates/backdrop-blur-glow", version = "0.2.0" }

# Error model — thiserror 2 (structured variants, never a String error). Core forbids
# unsafe and has no GPU dep, so it cannot name a backend error: BlurError carries a
# boxed `dyn Error + Send + Sync` source (DESIGN §4.5).
thiserror = "2"

# GPU plumbing — pinned to exactly what the first consumer (abdu-egui-ui) resolves,
# so eventual integration is friction-free.
bytemuck = { version = "1", features = ["derive"] }
wgpu = "29"
egui = "0.34"
egui-wgpu = { version = "0.34", default-features = false }
# egui_glow — the egui paint-callback integration for the grab-pass path. default-features = false
# keeps egui-winit (and thus winit) out of the kiosk library build; it pins glow 0.17 (matches ours).
egui_glow = { version = "0.34", default-features = false }
# Headless AccessKit-tree + interaction testing for the egui adapter (dev-dep).
egui_kittest = "0.34"
# glow — the OpenGL/GLES/WebGL2 backend (the grab-pass path: eframe-on-glow + the cage kiosk).
# Build-script-free (pure runtime-loaded fn pointers), so `backdrop-blur-glow` compiles on any
# runner with no GL present; its GPU tests are `gl-snapshots`-gated (DESIGN §5, IMPL §1.2).
glow = "0.17"
# Uncatchable structured warning for the glow backend's no-GL-in-Drop teardown contract.
log = "0.4"
