[package]
name = "backdrop-blur-core"
version = "0.1.0"
description = "Backend-agnostic seam, material/geometry vocabulary, and error model for backdrop blur (frosted glass). The one crate with no GPU dependency."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Structured errors only. No GPU dependency lives here — core is pure, headless, and
# `#![forbid(unsafe_code)]`, so it cannot name `wgpu::*`/`glow::*` error types; BlurError
# carries a boxed `dyn Error + Send + Sync` source instead (DESIGN §4.5).
thiserror = { workspace = true }
