[package]
name = "backdrop-blur-egui"
version = "0.1.0"
description = "egui adapter for backdrop-blur: frosted glass over two paths sharing one Surface vocabulary — own-loop (egui-wgpu, render to an intermediate and composite) and grab-pass (eframe-on-glow, grab the live framebuffer in a paint callback, blur, composite)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

# Build docs with both adapter paths so docs.rs shows the grab-pass API (GrabPassRenderer, frost),
# not just the default own-loop path. Without this, the mainstream grab-pass path is invisible on
# docs.rs (default-feature doc build = own-loop only).
[package.metadata.docs.rs]
all-features = true

[dependencies]
# Neutral spine — both the own-loop and grab-pass paths need these.
backdrop-blur-core = { workspace = true }
egui = { workspace = true }
# Own-loop (egui-wgpu) backend deps — optional, activated only by the `own-loop` feature, so a
# kiosk/grab-pass build pulls neither wgpu nor egui-wgpu. default-features = false (on egui-wgpu,
# in the workspace pin) keeps winit OUT of the library — only the example pulls winit.
backdrop-blur-wgpu = { workspace = true, optional = true }
egui-wgpu = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
# Grab-pass (eframe-on-glow) backend deps — optional, activated only by the `grab-pass` feature, so
# an own-loop build pulls neither. Neither pulls wgpu, so the kiosk build stays wgpu-free.
backdrop-blur-glow = { workspace = true, optional = true }
egui_glow = { workspace = true, optional = true }
# The adapter names glow::Context in its public API (GrabPassRenderer::new/destroy); pinned to the
# same 0.17 backdrop-blur-glow + egui_glow use, so there is one glow in the graph.
glow = { workspace = true, optional = true }
# Uncatchable best-effort warning when a grab-pass frost fails inside a paint callback (which cannot
# propagate an error). Optional — only the grab-pass path uses it.
log = { workspace = true, optional = true }

[dev-dependencies]
egui_kittest = { workspace = true }
pollster = "0.4"

[features]
default = ["own-loop"]
# The own-loop path: the egui-wgpu adapter (OwnLoopRenderer) that renders to an intermediate and
# composites the frosted surface. Pulls the wgpu stack.
own-loop = ["dep:backdrop-blur-wgpu", "dep:egui-wgpu", "dep:wgpu"]
# The grab-pass path: the eframe-on-glow adapter (GrabPassRenderer). Pulls the glow backend + the
# egui_glow paint-callback integration — neither pulls wgpu, so the kiosk build stays wgpu-free.
grab-pass = ["dep:backdrop-blur-glow", "dep:egui_glow", "dep:glow", "dep:log"]
# Gates the GPU tier: a headless lavapipe test that drives real egui-wgpu rendering + blur and
# reads the frosted result back. Hard-imports the wgpu backend, so it requires `own-loop`.
image-snapshots = ["own-loop"]
